# Inkwell

./: package.json  pnpm-lock.yaml
scripts/: postinstall.js
src-tauri/: Cargo.toml  tauri.conf.json
